# gsimplify

./: .gitignore  build.py  credentials.json  creds.json  pickle.json  pyproject.toml  run.py  simplify-294920-fd5e9aa53e20.json  test.py  token.pickle
gsimplify/: drive.py  typedefs.py
simplify/: __init__.py  auth.py  build.py  docs.py  drive.py  templates.py  typedefs.py
tests/templates/: example.html
